fix safari z-index issue

--- a/assets/stylesheets/defaults.css
+++ b/assets/stylesheets/defaults.css
@@ -91,10 +91,10 @@ i:hover {
 }
 
 button {
-  width: 110px;
-  height: 40px;
+  min-width: 110px;
+  min-height: 40px;
   background-color: #ffffff;
-  font-size: 20px;
+  font-size: 18px;
   border-radius: 8px;
   font-weight: bold;
 }
